--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "^13.0.2",
-    "expo-linear-gradient": "^12.0.1",
+    "expo-haptics": "^12.0.1",
+    "expo-linear-gradient": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "^1.3.2",
     "react-native-mask-input": "^1.2.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
