--- a/package.json
+++ b/package.json
@@ -9,29 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/fira-sans": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/poiret-one": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
+    "@rneui/base": "^4.0.0-rc.7",
     "axios": "^1.2.2",
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "^13.0.2",
     "expo-haptics": "^12.0.1",
-    "expo-linear-gradient": "~11.0.0",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-maps": "^1.3.2",
+    "react-native-maps": "1.3.2",
     "react-native-mask-input": "^1.2.2",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-content": "^1.0.28",
     "react-native-snap-carousel": "^3.9.1"
   },
