--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~47.0.12",
     "expo-av": "^13.0.2",
+    "expo-camera": "^13.1.0",
     "expo-haptics": "^12.0.1",
+    "expo-image-manipulator": "^11.0.0",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "^12.0.0",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
