--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@expo-google-fonts/fira-sans": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/poiret-one": "^0.2.2",
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.4",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
@@ -27,15 +29,17 @@
     "expo-haptics": "^12.0.1",
     "expo-image-manipulator": "^11.0.0",
     "expo-linear-gradient": "~12.0.1",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "^12.0.0",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-mask-input": "^1.2.2",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-simple-radio-button": "^2.7.4",
