--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@expo-google-fonts/poiret-one": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/datetimepicker": "^6.7.4",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
@@ -36,10 +36,10 @@
     "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "1.3.2",
     "react-native-mask-input": "^1.2.2",
-    "react-native-reanimated": "^2.14.4",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-simple-radio-button": "^2.7.4",
